# regulus

./: .gitignore  Cargo.toml
audio/: README
src/: bin.rs  biquad.rs  block.rs  block_opts.rs  channel.rs  constants.rs  filter.rs  gating.rs  itu_r_bs1770.rs  lib.rs  loudness.rs  main.rs  mean_sq.rs  peak.rs  pipeline.rs  stats.rs  test_util.rs  types.rs  util.rs  wave.rs
src/gated_loudness/: gating.rs  mod.rs
tests/: wave_to_loudness.rs
