[package]
name = "regulus"
version = "0.1.0"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"

[dependencies]
circular-queue = "0.2.6"
# dasp = { version = "0.11", features = ["signal"] }
# dasp = { git = "https://github.com/RustAudio/dasp", rev = "39015e639118d281d660dfb5dd1bc26365318f46", features = ["signal"] }
# Includes my `.channels_mut()` and biquad commits.
dasp = { git = "https://github.com/linclelinkpart5/dasp", branch="#145", features = ["signal", "filter", "signal-filter"] }
strum = "0.15.0"

[dev-dependencies]
approx = "0.3.2"
byteorder = "1.3"
# claxon = "0.4"
# Includes my `.into_samples()` commit.
claxon = { git = "https://github.com/ruuda/claxon", rev = "66bf34395d9285e896331c40effdae38f3c3db5e" }
hound = "3.4"
itertools = "0.10"
tempfile = "3"
