[package]
name = "regulus"
version = "0.1.0"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"

[dependencies]
circular-queue = "0.2.6"
sampara = { version = "0.1.1", features = ["biquad"] }
strum = "0.15.0"

[dev-dependencies]
approx = "0.3.2"
byteorder = "1.3"
# claxon = "0.4"
# Includes my `.into_samples()` commit.
claxon = { git = "https://github.com/ruuda/claxon", rev = "66bf34395d9285e896331c40effdae38f3c3db5e" }
hound = "3.4"
itertools = "0.10"
tempfile = "3"
